Set classLoaderLayeringStrategy for domain C to resolve class loading issues